docs-archive/apache-airflow-providers-standard/1.5.0/_sources/_api/airflow/providers/standard/operators/hitl/index.rst.txt
airflow.providers.standard.operators.hitl
=========================================

.. py:module:: airflow.providers.standard.operators.hitl


Classes
-------

.. autoapisummary::

   airflow.providers.standard.operators.hitl.HITLOperator
   airflow.providers.standard.operators.hitl.ApprovalOperator
   airflow.providers.standard.operators.hitl.HITLBranchOperator
   airflow.providers.standard.operators.hitl.HITLEntryOperator


Module Contents
---------------

.. py:class:: HITLOperator(*, subject, options, body = None, defaults = None, multiple = False, params = None, **kwargs)

   Bases: :py:obj:`airflow.providers.standard.version_compat.BaseOperator`


   Base class for all Human-in-the-loop Operators to inherit from.

   :param subject: Headline/subject presented to the user for the interaction task.
   :param options: List of options that the an user can select from to complete the task.
   :param body: Descriptive text (with Markdown support) that gives the details that are needed to decide.
   :param defaults: The default options and the options that are taken if timeout is passed.
   :param multiple: Whether the user can select one or multiple options.
   :param params: dictionary of parameter definitions that are in the format of Dag params such that
       a Form Field can be rendered. Entered data is validated (schema, required fields) like for a Dag run
       and added to XCom of the task result.


   .. py:attribute:: template_fields
      :type:  collections.abc.Collection[str]
      :value: ('subject', 'body')



   .. py:attribute:: subject


   .. py:attribute:: body
      :value: None



   .. py:attribute:: options


   .. py:attribute:: defaults


   .. py:attribute:: multiple
      :value: False



   .. py:attribute:: params
      :type:  airflow.sdk.definitions.param.ParamsDict
      :value: None



   .. py:method:: validate_defaults()

      Validate whether the given defaults pass the following criteria.

      1. Default options should be the subset of options.
      2. When multiple is False, there should only be one option.



   .. py:method:: execute(context)

      Add a Human-in-the-loop Response and then defer to HITLTrigger and wait for user input.



   .. py:property:: serialized_params
      :type: dict[str, Any]



   .. py:method:: execute_complete(context, event)


   .. py:method:: process_trigger_event_error(event)


   .. py:method:: validate_chosen_options(chosen_options)

      Check whether user provide valid response.



   .. py:method:: validate_params_input(params_input)

      Check whether user provide valid params input.



.. py:class:: ApprovalOperator(ignore_downstream_trigger_rules = False, **kwargs)

   Bases: :py:obj:`HITLOperator`, :py:obj:`airflow.providers.standard.utils.skipmixin.SkipMixin`


   Human-in-the-loop Operator that has only 'Approval' and 'Reject' options.


   .. py:attribute:: inherits_from_skipmixin
      :value: True


      Used to determine if an Operator is inherited from SkipMixin or its subclasses (e.g., BranchMixin).



   .. py:attribute:: FIXED_ARGS
      :value: ['options', 'multiple']



   .. py:attribute:: ignore_downstream_trigger_rules
      :value: False



   .. py:method:: execute_complete(context, event)


.. py:class:: HITLBranchOperator(**kwargs)

   Bases: :py:obj:`HITLOperator`


   BranchOperator based on Human-in-the-loop Response.


   .. py:method:: execute_complete(context, event)
      :abstractmethod:



.. py:class:: HITLEntryOperator(**kwargs)

   Bases: :py:obj:`HITLOperator`


   Human-in-the-loop Operator that is used to accept user input through TriggerForm.


